compiler/testData/cli/jvm/noReflectionInClasspath.kt
class Foo(val prop: Any)

fun t1() = Foo::prop
fun t2() = Foo::class
